# pixi-project-be-cpp

./: AppComponent.hpp  CMakeLists.txt  StaticController.hpp  Tiltfile  main.cpp
.github/workflows/: docker-build.yaml
cloudformation/: ecr-push-user.yaml  main.yaml
helm-wc2r/: .helmignore  Chart.yaml  values.dev-local.yaml
helm-wc2r/templates/gamesession-api/: deployment.yaml  service.yaml
helm-wc2r/templates/postgres/: deployment.yaml  service.yaml  volume-claim.yaml  volume.yaml
public/: index.html
